--- a/doc/gnutls.texi
+++ b/doc/gnutls.texi
@@ -17,7 +17,7 @@
 This manual is last updated @value{UPDATED} for version
 @value{VERSION} of GnuTLS.
 
-Copyright @copyright{} 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
+Copyright @copyright{} 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
@@ -79,10 +79,9 @@ Documentation License''.
 * How to use GnuTLS in applications::
 * How to use TLS in application protocols::
 * Included programs::
-* Function reference::
-* All the supported ciphersuites in GnuTLS::
-* Guile Bindings::
 * Internal architecture of GnuTLS::
+* Function reference::
+* Supported ciphersuites in GnuTLS::
 * Copying Information::
 * Concept Index::
 * Function and Data Index::
@@ -106,11 +105,13 @@ Documentation License''.
 
 @include cha-programs.texi
 
+@include cha-internals.texi
+
+@c appendices
+
 @include cha-functions.texi
 
 @include cha-ciphersuites.texi
-
-@include cha-internals.texi
 
 @include cha-copying.texi
 
