--- a/doc/gnutls-guile.texi
+++ b/doc/gnutls-guile.texi
@@ -1,7 +1,7 @@
 \input texinfo   @c -*-texinfo-*-
 @comment %**start of header
 @setfilename gnutls-guile.info
-@include version.texi
+@include version-guile.texi
 @settitle GnuTLS-Guile @value{VERSION}
 
 @c don't indent the paragraphs.
@@ -64,6 +64,7 @@ Documentation License''.
 * Guile API Conventions::       Naming conventions and other idiosyncrasies.
 * Guile Examples::              Quick start.
 * Guile Reference::             The Scheme GnuTLS programming interface.
+* Copying Information::         Copying information.
 @end menu
 
 @node Preface
@@ -72,8 +73,8 @@ Documentation License''.
 This manual describes the @uref{http://www.gnu.org/software/guile/,
 GNU Guile} Scheme programming interface to GnuTLS.  The reader is
 assumed to have basic knowledge of the protocol and library.  Details
-missing from this chapter may be found in @ref{Function reference,
-the C API reference}.
+missing from this chapter may be found in Function reference,
+of the C API reference.
 
 At this stage, not all the C functions are available from Scheme, but
 a large subset thereof is available.
@@ -688,10 +689,6 @@ Licence, version 3 or later.
 @c ispell-local-dictionary: "american"
 @c End:
 
-@node GNU Free Documentation License
-@appendix GNU Free Documentation License
-
-@cindex FDL, GNU Free Documentation License
-@include fdl-1.3.texi
+@include cha-copying.texi
 
 @bye
