--- a/THANKS
+++ b/THANKS
@@ -113,6 +113,7 @@ Michael Rommel			<rommel [at] layer-7.net>
 Mark Brand			<mabrand [at] mabrand.nl>
 Vitaly Kruglikov		<vitaly.kruglikov [at] palm.com>
 Kalle Olavi Niemitalo 		<kon [at] iki.fi>
+Dash Shendy                     <admin [at] dash.za.net>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
