Added SuiteB ciphersuites. Added SUITEB128 and SUITEB192 priority strings. SECURE256 was renamed to SECURE192 (because TLS ciphersuite's security level was not enough to justify 256-bits).

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,9 @@ See the end for copying conditions.
 
 * Version 2.99.3 (unreleased)
 
+** libgnutls: Added SUITEB128 and SUITEB192 priority
+strings to enable the NSA SuiteB cryptography ciphersuites.
+
 ** libgnutls: Added gnutls_pubkey_verify_data2() that will
 verify data provided the signature algorithm.
 
