--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,24 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 2.12.7 (unreleased)
+
+** p11tool: Require login as security officer if --trusted option is
+provided. Reported by Rickard Bellgrim.
+
+** libgnutls: The CKA_SUBJECT field is specified when copying certificates
+in PKCS #11 smart-cards. Patch by Rickard Bellgrim.
+
+** libgnutls: Write label when writing private keys in PKCS #11 tokens.
+Reported by Rickard Bellgrim.
+
+** libgnutls: Accept CKR_USER_ALREADY_LOGGED_IN as a valid error code
+when logging in to PKCS #11 tokens.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 2.12.6 (released 2011-06-4)
 
 ** libgnutls: Allow usage of DSA signatures with truncated hash.
