--- a/THANKS
+++ b/THANKS
@@ -114,6 +114,7 @@ Mark Brand			<mabrand [at] mabrand.nl>
 Vitaly Kruglikov		<vitaly.kruglikov [at] palm.com>
 Kalle Olavi Niemitalo 		<kon [at] iki.fi>
 Dash Shendy                     <admin [at] dash.za.net>
+Rickard Bellgrim                <rickard [at] opendnssec.org>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
