--- a/doc/cha-cert-auth.texi
+++ b/doc/cha-cert-auth.texi
@@ -496,56 +496,25 @@ char* url;
 
 gnutls_global_init();
 
-for (i=0;;i++) {
-	ret = gnutls_pkcs11_token_get_url(i, &url);
-	if (ret == GNUTLS_E_REQUESTED_DATA_NOT_AVAILABLE)
-		break;
+for (i=0;;i++) 
+  {
+    ret = gnutls_pkcs11_token_get_url(i, &url);
+    if (ret == GNUTLS_E_REQUESTED_DATA_NOT_AVAILABLE)
+      break;
 
-	if (ret < 0)
-		exit(1);
+    if (ret < 0)
+      exit(1);
 		
-	fprintf(stdout, "Token[%d]: URL: %s\n", i, url);
-	gnutls_free(url);
-}
+    fprintf(stdout, "Token[%d]: URL: %s\n", i, url);
+    gnutls_free(url);
+  }
 gnutls_global_deinit();
 @end verbatim
 
 
 The next one will list all certificates in a token, that have a corresponding
 private key:
-@verbatim
-gnutls_pkcs11_obj_t *obj_list;
-unsigned int obj_list_size = 0;
-gnutls_datum_t cinfo;
-int i;
-
-obj_list_size = 0;
-ret = gnutls_pkcs11_obj_list_import_url( obj_list, NULL, url, \
-			GNUTLS_PKCS11_OBJ_ATTR_CRT_WITH_PRIVKEY);
-if (ret < 0 && ret != GNUTLS_E_SHORT_MEMORY_BUFFER)
-	exit(1);
-
-/* no error checking from now on */
-obj_list = malloc(sizeof(*obj_list)*obj_list_size);
-
-gnutls_pkcs11_obj_list_import_url( obj_list, &obj_list_size, url, flags);
-
-/* now all certificates are in obj_list */
-for (i=0;i<obj_list_size;i++) {
-
-	gnutls_x509_crt_init(&xcrt);
-
-	gnutls_x509_crt_import_pkcs11(xcrt, obj_list[i]);
-		
-	gnutls_x509_crt_print (xcrt, GNUTLS_CRT_PRINT_FULL, &cinfo);
-
-	fprintf(stdout, "cert[%d]:\n %s\n\n", cinfo.data);
-
-	gnutls_free(cinfo.data);
-	gnutls_x509_crt_deinit(&xcrt);
-}
-@end verbatim
-
+@verbatiminclude examples/ex-pkcs11-list.c
 
 @subsection Writing Objects
 
